Changes in structure

--- a/index.html
+++ b/index.html
@@ -57,7 +57,94 @@
 
         </section>
 
+        <!-- Schedule section  -->
+        <section class="schedule">
+            <div class="schedule-container">
+                <p><span>Place:</span> New Park Hotel</p>
+                <p><span>Date:</span> 31 December Night 2023</p>
+                <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
 
+            </div>
+            <button class="btn-primary">JOIN NOW</button>
+        </section>
+
+        <!-- Coming soon section  -->
+        <section class="coming-soon">
+
+            <div class="coming-soon-container">
+
+                <div class="coming-soon-column">
+                    <h2 class="coming-soon-container-title-1">NEW BEST OFFER</h2>
+                    <h1 class="coming-soon-container-title-2">Coming Soon</h1>
+                    <p class="coming-soon-container-description-1">Whether you're sending heartfelt greetings to friends
+                        and family or seeking to motivate and uplift someone, you'll find the perfect words here to make
+                        the beginning of 2024 truly special.</p>
+                </div>
+
+                <div class="coming-soon-column">
+                    <img class="coming-soon-container-image" src="./images/Ellipse 1.png" alt="">
+                </div>
+
+                <div class="coming-soon-column">
+                    <h2 class="coming-soon-container-title-3">2024</h2>
+                    <p class="coming-soon-container-description-2">We've curated messages spanning various categories to
+                        help you convey your warmest wishes, inspire those around you, and spread joy and positivity.
+                    </p>
+
+                    <img class="coming-soon-container-image-1" src="./images/Group 96.png" alt="">
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- Gift section  -->
+        <section class="gift-section">
+            <div class="gift-container">
+                <div class="gift-item">
+                    <h2 class="gift-item-title">THE BEST GIFTS</h2>
+                    <h1 class="gift-item-title-1">Our Awesome Portfolio</h1>
+                    <p class="gift-item-description">The greatest gift we can give to others is to show them the truth
+                        of who they are.In the presence of one who can give us this gift, we gain the confidence to
+                        listen to our own voice, to look deep within ourselves, and to stand in our truth.</p>
+                </div>
+                <div class="gift-item-image">
+                    <img src="./images/Rectangle 3.png" alt="">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <img src="./images/Rectangle 6.png" alt="">
+                    <img src="./images/Rectangle 7.png" alt="">
+                    <img src="./images/Rectangle 8.png" alt="">
+                </div>
+
+            </div>
+        </section>
+
+        <!-- Subscribe section  -->
+        <section class="subscribe">
+            <div class="subscribe-container">
+                <div class="subscribe-container-item">
+                    <img class="subscribe-container-item-image" src="./images/Group 61.png" alt="">
+                    <h2 class="subscribe-container-item-title">Subscribe Newsletter</h2>
+                    <p class="subscribe-container-item-description">The greatest gift we can give to others is to show
+                        them the truth of who they are.In the presence of one who can give us this gift, we gain the
+                        confidence to listen to our own voice, to look deep within ourselves, and to stand in our truth.
+                    </p>
+
+                    <div class="subscribe-container-item-btn">
+                        <input type="email" name="" id="" placeholder="user@gmail.com">
+                        <input type="submit" name="Subscribe" id="">
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+
+
+        </section>
 
 
 
@@ -67,7 +154,7 @@
 
 
 
-    
+
     <footer></footer>
 
 
