Styles changes in html and css

--- a/index.html
+++ b/index.html
@@ -133,29 +133,55 @@
 
                     <div class="subscribe-container-item-btn">
                         <input type="email" name="" id="" placeholder="user@gmail.com">
-                        <input type="submit" name="Subscribe" id="">
+                        <input type="submit" name="Submit" id="">
                     </div>
                 </div>
 
             </div>
-
-
-
-
-
-
         </section>
 
-
-
     </main>
+<!-- Footer section  -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <p class="footer-description-1">44, Big Building Roosevelt Street</p>
+                <p class="footer-description-1">Beach Gardens Florida 33410</p>
+            </div>
+            <div class="footer-column">
+                <p class="footer-description-2">+00 123 584 124</p>
+                <p class="footer-description-2">www.website.com</p>
+            </div>
+    </div>
+
+           <hr>
+                    <!-- Social section  -->
+           
+    <div class="social">
+        <a href=""><img src="./images/Facebook.png" alt=""></a>
+        <a href=""><img src="./images/Instagram.png" alt=""></a>
+        <a href=""><img src="./images/Twitter.png" alt=""></a>
+        <a href=""><img src="./images/Linkedin.png" alt=""></a>
+    </div>
+
+    <hr>
+
+    <div class="footer-copyright-container">
+        <div class="footer-copyright-column">
+            <p class="footer-description-3">2017, All Rights Reserved.</p>
+            
+        </div>
+        <div class="footer-copyright-column">
+            <p class="footer-description-4">Unsubscribe</p>
+        </div>
+</div>
 
 
 
 
 
 
-    <footer></footer>
+    </footer>
 
 
 
