--- a/index.html
+++ b/index.html
@@ -98,6 +98,40 @@
 
         </section>
 
+        <!-- Holiday sale section  -->
+        <section class="holiday-sale">
+            <div class="holiday-sale-container">
+
+                <h2 class="holiday-sale-title-1">WHAT IS FUNCTIONAL</h2>
+                <h1 class="holiday-sale-title-2"><span>Holidays</span> Sale 50%</h1>
+                <p class="holiday-sale-description">A good sales slogan is always catchy and has attractive deals for
+                    customers. For example, a Christmas sale slogan with a flat 30%-70% off, by one get one free, gifts,
+                    and coupons will attract loads more buyers than simple slogans. The earlier you start your marketing
+                    plans and execute them, the more you will have a monopoly over the market.</p>
+
+            </div>
+
+            <div class="holiday-sale-container-image">
+                <div class="holiday-sale-column">
+                    <img class="holiday-sale-container-image-1" src="./images/Group 75.png" alt="">
+                </div>
+
+                <div class="holiday-sale-column">
+                    <img class="holiday-sale-container-image-2" src="./images/Group 44.png" alt="">
+                </div>
+
+                <div class="holiday-sale-column">
+                    <img class="holiday-sale-container-image-3" src="./images/Rectangle 1.png" alt="">
+                </div>
+
+                <div class="holiday-sale-column">
+                    <img class="holiday-sale-container-image-4" src="./images/Rectangle 2.png" alt="">
+                </div>
+
+            </div>
+
+        </section>
+
         <!-- Gift section  -->
         <section class="gift-section">
             <div class="gift-container">
@@ -141,7 +175,9 @@
         </section>
 
     </main>
-<!-- Footer section  -->
+
+
+    <!-- Footer section  -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
@@ -152,41 +188,33 @@
                 <p class="footer-description-2">+00 123 584 124</p>
                 <p class="footer-description-2">www.website.com</p>
             </div>
-    </div>
-
-           <hr>
-                    <!-- Social section  -->
-           
-    <div class="social">
-        <a href=""><img src="./images/Facebook.png" alt=""></a>
-        <a href=""><img src="./images/Instagram.png" alt=""></a>
-        <a href=""><img src="./images/Twitter.png" alt=""></a>
-        <a href=""><img src="./images/Linkedin.png" alt=""></a>
-    </div>
-
-    <hr>
-
-    <div class="footer-copyright-container">
-        <div class="footer-copyright-column">
-            <p class="footer-description-3">2017, All Rights Reserved.</p>
-            
         </div>
-        <div class="footer-copyright-column">
-            <p class="footer-description-4">Unsubscribe</p>
+
+        <hr>
+
+        <!-- Social section  -->
+
+        <div class="social">
+            <a href=""><img src="./images/Facebook.png" alt=""></a>
+            <a href=""><img src="./images/Instagram.png" alt=""></a>
+            <a href=""><img src="./images/Twitter.png" alt=""></a>
+            <a href=""><img src="./images/Linkedin.png" alt=""></a>
         </div>
-</div>
 
+        <hr>
 
+        <!-- Copyright section  -->
+        <div class="footer-copyright-container">
+            <div class="footer-copyright-column">
+                <p class="footer-description-3">2017, All Rights Reserved.</p>
 
-
-
+            </div>
+            <div class="footer-copyright-column">
+                <p class="footer-description-4">Unsubscribe</p>
+            </div>
+        </div>
 
     </footer>
-
-
-
-
-
 
 
 </body>
